--- a/src/main/java/QA/Config/config.properties
+++ b/src/main/java/QA/Config/config.properties
@@ -1,5 +1,5 @@
 url = https://ui.cogmento.com/?lang=en
-username = dhirendrayadav8840@gmail.com
-Password = Dhiru@1234
+username = dhirudhirendra629@gmail.com
+Password = Noida@123
 
 browser = chrome
